# nexis-lisp-c

./: .gitattributes  CMakeLists.txt  README.md  astnode.c  astnode.h  evaluator.c  evaluator.h  hashtable.c  hashtable.h  lexer.c  lexer.h  log.md  main.c  parser.c  parser.h  token.c  token.h
inc/: astnode.h  builtins.h  env.h  evaluator.h  hashtable.h  parser.h  repl.h  test.h  token.h
log/: 2026-3-8.md  learning.md  log.md
src/: astnode.c  builtins.c  env.c  evaluator.c  hashtable.c  lexer.c  main.c  parser.c  repl.c  test.c  token.c
